minor updates in some sections

--- a/index.html
+++ b/index.html
@@ -53,19 +53,21 @@
       <li>
         <h3>Frontend</h3>
         <ul>
-          <li>ReactJs: ⭐️⭐️⭐️⭐️⭐️</li>
-          <li>React Native: ⭐️⭐️⭐️⭐️⭐️</li>
+          <li>ReactJs: ⭐️⭐️⭐️⭐️</li>
+          <li>React Native: ⭐️⭐️⭐️⭐️</li>
           <li>Svelte: ⭐️⭐️</li>
           <li>NextJs: ⭐️⭐️</li>
-          <li>JavaScript: ⭐️⭐️⭐️⭐️⭐️</li>
+          <li>JavaScript: ⭐️⭐️⭐️⭐️</li>
           <li>TypeScript: ⭐️⭐️⭐️⭐️</li>
+          <li>Kotlin: ⭐️⭐️</li>
           <li>CSS: ⭐️⭐️⭐️⭐️</li>
         </ul>
         <li><h3>Backend</h3>
         <ul>
-            <li> Django Rest Framework: ⭐️⭐️⭐️⭐️</li>
+            <li>Django Rest Framework: ⭐️⭐️⭐️⭐️</li>
             <li>Flask: ⭐️⭐️⭐️⭐️</li>
             <li>ASP.NET Core Web API: ⭐️⭐️</li>
+            <li>Python: ⭐️⭐️⭐️⭐️</li>
         </ul>
         </li>
         <li>
